<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>force_torque_sensor</name>
  <version>1.0.0</version>
  <description>Calibration script for tool CoG and mass</description>
  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>
  <license>Apache2.0</license>
<!--   <url type="website">http://wiki.ros.org/force_torque_sensor</url> -->
  <url type="repository">https://github.com/KITrobotics/force_torque_sensor</url>
  <url type="bugtracker">https://github.com/KITrobotics/force_torque_sensor/issues</url>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>generate_parameter_library</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
